<resources>
    <string name="app_name">卡卡云视频</string>

    <!-- 状态视图  -->
    <string name="loading">加载中...</string>
    <string name="text_empty">暂无相关数据!</string>
    <string name="text_nonet">网络出现故障~</string>
    <string name="text_retry">点击重试</string>


    <string name="main_tab_name_home">看点</string>
    <string name="main_tab_name_video">视频</string>
    <string name="main_tab_name_apprentice">收徒</string>
    <string name="main_tab_task">任务</string>
    <string name="main_tab_name_user">我的</string>
    <string name="main_tab_name_picture">美图</string>
    <string name="main_tab_name_l_video">小视频</string>
    <string name="main_tab_name_rrh">人人号</string>


    <item name="tag_adapter" type="id"></item>
    <item name="tag_linearlayou_manager" type="id"></item>

    <string name="network_error">网络不给力</string>
    <string name="media_hint_desc">头条号订阅为空</string>

    <string name="button_allow">允许</string>
    <string name="button_deny">拒绝</string>
    <string name="button_enter">确定</string>
    <string name="button_cancel">取消</string>
    <string name="action_share">分享</string>
    <string name="share_to">分享</string>
    <string name="subscribe">订阅</string>

    <string name="error">发生错误</string>
    <string name="no_more_content">暂无更多内容</string>

    <string name="timeCountTip1">认真阅读，满<font color='#3577ff'>30</font>秒即可获得1次金币奖励</string>
    <string name="timeCountTip2">每人每天可获得约<font color='#3577ff'>30</font>篇阅读奖励</string>
    <string name="timeCountTip3">文章/视频分享后被阅读，奖励随机金币/阅读</string>
    <string name="timeCountTip4">仔细阅读还能发现隐藏在页面里的<font color='#3577ff'>随机红包</font>哦</string>
    <string name="timeCountTip5">仔细阅读浏览到<font color='#3577ff'>页面底部</font>才可以得到金币哦</string>
    <string name="timeCountTip6">收徒奖励：徒弟上供<font color='#3577ff'>100%</font></string>
    <string name="timeCountTip7">每篇文章仅能获得1次奖励，重复阅读无奖励</string>

    <string name="tv_tx_money">可提现金额:</string>
    <string name="tv_tx_wxts">温馨提示</string>
    <string name="tv_tx_wxts_sm">\t\t\t\t10元以内小额提现秒到账，10元及以上大额提现3个工作日内到账</string>

    <string name="tv_tx_alipay">支付宝</string>
    <string name="tv_tx_wechat">微信</string>
    <string name="tv_tx_zwkt">暂未开通</string>

    <string name="tv_bdwx">绑定微信 :</string>
    <string name="tv_tx_alipay_ts">请输入账号对应的真实姓名</string>
    <string name="tv_tx_wechat_ts">请填写微信实名身份证上的姓名</string>

    <string name="tv_tx_sqtx">申请提现</string>
    <string name="withdraw_num" >剩%1$d份</string>

    <string name="load_yw" formatted="false">
          <![CDATA[
          <font color=#c6c6c6>— 该页面已由%1$s优化 </font>
          <font color=#CECEFF>查看原文</font>
          <font color=#c6c6c6> —</font>
          ]]>
    </string>

    <string name="video_loading">努力加载中</string>
    <string name="mp4_error">播放失败</string>
    <string name="cannot_zan_self">不能给自己点赞</string>
    <string name="video_say">喜欢就要说出来</string>
    <string name="no_more_data">没有更多数据</string>
    <string name="load_failure">加载失败</string>
    <string name="reload">重新加载</string>
    <string name="all_replys">查看全部回复</string>
    <string name="please_login_2">登录状态失效，请重新登录</string>
    <string name="no_data">暂无数据</string>
    <string name="comment">评论</string>
    <string name="reply">回复</string>
    <string name="cannot_like_self">不能给自己点赞</string>
    <string name="cannot_reply_self">不能回复自己</string>
    <string name="comment_tips_null">回复内容不能为空</string>
    <string name="say_something">说点什么吧~</string>
    <string name="send">发送</string>
    <string name="refresh_down_1">下拉可以刷新</string>
    <string name="refresh_down_2">松开立即刷新</string>
    <string name="refresh_down_3">正在刷新数据中</string>
    <string name="refresh_up_1">上拉加载更多</string>
    <string name="refresh_up_2">松开加载更多</string>
    <string name="refresh_up_3">正在加载更多中</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="auth_login_ing">正在授权登录</string>
    <string name="wallet">钱包</string>
    <string name="add_follow">+ 关注</string>
    <string name="private_msg">私信</string>
    <string name="sign_hint2">这家伙很懒，什么都没有留下。</string>
    <string name="cannot_follow_self">不能关注自己</string>
    <string name="please_login">请先登录</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="please_input_right_date">请选择正确的日期</string>
    <string name="you_have_at_him">你已经@过他了</string>
    <string name="you_have_at_him_2">已经@了相同昵称的人</string>
    <string name="no_comment">暂无评论，快来抢沙发吧</string>
    <string name="please_input_content">请输入内容</string>
    <string name="report">举报</string>
    <string name="save">保存</string>
    <string name="black">拉黑</string>
    <string name="copy">复制</string>
    <string name="delete">删除</string>
    <string name="processing">处理中</string>
    <string name="share_fail">分享失败</string>
    <string name="share_cancel">分享取消</string>
    <string name="share_success">分享成功</string>
    <string name="clip_success">复制成功</string>
    <string name="download_success">下载成功</string>
    <string name="download_fail">下载失败</string>
    <string name="storage_permission_refused">您拒绝了文件读写的权限，请到设置中修改</string>
    <string name="camera_permission_refused">您拒绝了使用摄像头的权限，请到设置中修改</string>
    <string name="record_audio_permission_refused">您拒绝了使用麦克风的权限，请到设置中修改</string>
    <string name="location_permission_refused">您拒绝了使用定位的权限，请到设置中修改</string>
    <string name="read_phone_status_permission_refused">您拒绝了读取手机信息的权限，请到设置中修改</string>
    <string name="call_permission_refused">您拒绝了打电话的权限，请到设置中修改</string>
    <string name="downloading">下载中</string>
    <string name="zuoping">作品</string>
    <string name="like">喜欢</string>
    <string name="fans">粉丝</string>
    <string name="my_fans">我的粉丝</string>
    <string name="my_fans_2">TA的粉丝</string>
    <string name="get_zan">获赞</string>
    <string name="follow">关注</string>
    <string name="set_black_success">拉黑成功</string>
    <string name="cancel_black">取消拉黑</string>
    <string name="cancel_black_success">解除拉黑成功</string>
    <string name="no_like_video">你赞过的作品都会放到这里</string>
    <string name="no_like_video_2">TA还没有喜欢的视频</string>
    <string name="no_work_video">TA还没有作品</string>
    <string name="music_suffix">创作的原声</string>
    <string name="share_qq">QQ</string>
    <string name="share_qzone">QQ空间</string>
    <string name="share_wx">微信</string>
    <string name="share_wx_pyq">朋友圈</string>
    <string name="share_wx_facebook">facebook</string>
    <string name="share_wx_twitter">推特</string>

    <string name="奖励">奖励</string>
    <string name="邀请注册送">邀请注册送</string>
</resources>
