<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/withdrawals_divider_color"
    android:orientation="vertical">


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white_color">

        <LinearLayout
            android:id="@+id/ll_alipay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_alipay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableLeft="@drawable/img_tx_alipay"
                android:paddingLeft="@dimen/dp_10"
                android:text="@string/tv_tx_alipay"
                android:textStyle="bold" />

            <View
                android:id="@+id/v_alipay"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@color/base_color_orange"/>
        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/withdrawals_divider_color"/>

        <LinearLayout
            android:id="@+id/ll_wechat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableLeft="@drawable/img_tx_wechat"
                android:paddingLeft="@dimen/dp_10"
                android:text="@string/tv_tx_wechat"
                android:textStyle="bold" />

            <View
                android:id="@+id/v_wechat"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@color/base_color_orange"
                android:visibility="invisible"/>
        </LinearLayout>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12.5dp"
            android:layout_marginRight="12.5dp"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_25"
            android:paddingTop="15dp">


            <LinearLayout
                android:id="@+id/ll_alipay_show"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/corver_tx_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="12.5dp"
                android:visibility="visible">

                <TextView
                    style="@style/withdrawals_input_text_style"
                    android:text="支付宝账号" />

                <EditText
                    android:id="@+id/et_pay_username"
                    style="@style/withdrawals_input_edittext_style"
                    android:hint="请输入邮箱、手机号格式账号" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rl_wechat_show"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/corver_tx_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="12.5dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv"
                    style="@style/withdrawals_input_text_style"
                    android:text="@string/tv_bdwx" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3">

                    <TextView
                        android:id="@+id/tv_nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dp_20"
                        android:layout_weight="1.6"
                        android:gravity="center|left"
                        android:text="www"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/sp_14" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_user"
                        android:layout_width="45dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerHorizontal="true"
                        android:layout_weight="0.4"
                        android:src="@drawable/icon_user_default"
                        app:civ_border_color="@color/white_color"
                        app:civ_border_width="5dp"
                        app:corner_radius="90dp" />

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/withdrawals_divider_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/corver_tx_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="12.5dp">

                <TextView
                    style="@style/withdrawals_input_text_style"
                    android:text="姓名" />

                <EditText
                    android:id="@+id/et_real_name"
                    style="@style/withdrawals_input_edittext_style"
                    android:hint="请输入账号对应的真实姓名" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/withdrawals_divider_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView

                    style="@style/withdrawals_input_text_style"
                    android:text="手机号" />

                <EditText
                    android:id="@+id/et_phone_number"
                    style="@style/withdrawals_input_edittext_style"
                    android:hint="请输入手机号" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/withdrawals_divider_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    style="@style/withdrawals_input_text_style"
                    android:text="提现金额" />

                <EditText
                    android:id="@+id/et_withdrawals_money"
                    style="@style/withdrawals_input_edittext_style"
                    android:hint="10元起提" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/tv_tx_money"
                    android:textColor="@color/text_light_black_666"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_can_withdrawals_money"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="155.2"
                    android:textColor="@color/text_light_black_666"
                    android:textSize="14sp" />
            </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:scrollbars="none">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_request"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="@dimen/dp_25"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/img_tx_ok"
                android:gravity="center"
                android:text="@string/tv_tx_sqtx"
                android:textColor="@color/white_color"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/corver_tx_bg"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12.5dp"
                    android:layout_marginTop="12.5dp"
                    android:text="@string/tv_tx_wxts"
                    android:textColor="@color/base_color_orange"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/tv_withdrawdes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12.5dp"
                    android:layout_marginLeft="12.5dp"
                    android:layout_marginTop="6dp"
                    android:gravity="center|left"
                    android:text="@string/tv_tx_wxts_sm"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
